# SAlc_Simplified

./: .readthedocs.yaml  README.md  SECURITY.md  main.py  mkdocs.yml  pyproject.tml  pyproject.toml  sqliteS.py
docs/: index.md  quickstart.md
docs/introduction/: quickstart.md  tables.md
docs/ref/: api.md
src/SimpleAlchemy/: sqliteS.py
